add unit tests for `min_mpg_by_cyl`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,6 @@ Depends:
 LazyData: true
 URL: https://github.com/hadley/minby
 BugReports: https://github.com/hadley/minby/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
